# grpc

./: CMakeLists.txt  client.c  readme.txt  server.c  tcpclient.c
build-hi3518C/: set.sh
build-x86/: CMakeCache.txt  Makefile  client  cmake_install.cmake  server  set.sh  tcpclient
build-x86/cJSON/: Makefile  cmake_install.cmake
build-x86/src/: Makefile  cmake_install.cmake
cJSON/: CMakeLists.txt  cJSON.c  cJSON.h  cJSON_Direct.c  cJSON_Direct.h  test.c
doc/: JSON文件编辑要求.txt  ~$GRPC通讯协议.doc  中维GRPC通讯协议.doc  代码结构说明.txt
doc/sgrpc/: readme.txt  sgrpc.c  sgrpc.h
doc/客户端Demo/: readme.txt
doc/客户端Demo/json/: account.json  alarm.json  audio.json  ifconfig.json  image.json  log.json  osd.json  privacy.json  ptz.json  record.json  storage.json
src/: CMakeLists.txt  grpc.c  grpc.h  md5.c  md5.h
src/generate/: ipc.c  ipc.h  ipc_c_userdef.c
test-httpclient/: CMakeLists.txt  httpclient.c
tools/: gengrpc  mkc.sh
tools/json/: account.json  channel.json  connect.json  devinfo.json  discovery.json  mdetect.json  screen.json  storage_server.json  stream.json  stream_server.json  vsourse.json
tools/src_ipc/: ipc_s_userdef.c
tools/src_ssserver/: ssserver.c  ssserver.h  ssserver_c_userdef.c  ssserver_s_userdef.c
tools/src_storage_server/: storage_json.c  storage_json.h  storage_json_c_userdef.c  storage_json_s_userdef.c
tools/src_vds/: vds.c  vds.h  vds_c_userdef.c  vds_s_userdef.c
tools/src_vms/: vms.c  vms.h  vms_c_userdef.c  vms_s_userdef.c
