
INCLUDE_DIRECTORIES(${TOP_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${TOP_SOURCE_DIR}/generate)
INCLUDE_DIRECTORIES(${TOP_SOURCE_DIR}/cJSON)

AUX_SOURCE_DIRECTORY(generate GENERATE)

ADD_LIBRARY(grpc STATIC
		grpc.c
		md5
		${GENERATE}
		)
 
INSTALL(TARGETS grpc
		ARCHIVE DESTINATION ${BOARD}
		)
 
#INSTALL(FILES onvif-main.h
#		DESTINATION include)
